[package]
name = "bitcoin-blockchain-query"
version = "0.1.5"
edition = "2021"
description = "Request information from the Bitcoin Blockchain"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind-request = "=0.1.13"
electrs-query = "=0.1.2"
